Changed package name and added SafeAdaBKB class

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,3 +10,4 @@ global-exclude doc/_build/**
 global-exclude __pycache__
 global-exclude benchmark_functions/**
 global-exclude test_cases/**
+global-exclude notebooks/**
